Bug 1924052: accept non-16-bit audio data on Android. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D235842